<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/pref_title_notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/notifications_new_message"
            android:title="@string/title_new_notification_sound" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/daily_notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/daily_notification"
            android:title="@string/new_daily_notifications" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Version">
        <Preference
            android:key="@string/key_version"
            android:summary="@string/app_version"
            android:title="@string/title_version" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Feedback">
        <Preference
            android:key="@string/key_send_feedback"
            android:summary="@string/summary_support"
            android:title="@string/title_send_feedback" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Rating">
        <Preference
            android:key="@string/key_rating"
            android:summary="@string/summary_rating"
            android:title="@string/title_rating" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Privacy Policy">
        <Preference
            android:key="@string/key_privacy"
            android:title="@string/privacy_policy">

        </Preference>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_header_about">

        <Preference
            android:selectable="false"
            android:summary="@string/summary_about" />
    </PreferenceCategory>

</PreferenceScreen>